Fixes #4391: Bottom of button cut off with IE (7?) and soria theme. Again, fixes issues with setting height on display:inline nodes that needed to be inline-block. Patch from Sam Foster (thanks Sam!).  CLA on file.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@10927 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -252,6 +252,8 @@
 .dijitComboBox {
 	/* outside of button */
 	margin:.2em;
+	/* normalize line-heights inside the button */
+	line-height: 1.3em;
 }
 
 .dijitButtonNode {
